--- a/pom.xml
+++ b/pom.xml
@@ -278,6 +278,11 @@
 				<version>5.1.46</version>
 			</dependency>
 			<dependency>
+				<groupId>com.oracle</groupId>
+				<artifactId>ojdbc6</artifactId>
+				<version>11.2.0.4</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.inject</groupId>
 				<artifactId>guice</artifactId>
 				<version>4.1.0</version>
